--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-###---STUB----###
+server.port=8082
+
+db.hostname=localhost
+#db.hostname=http://rouber
+
+spring.datasource.url=jdbc:postgresql://${db.hostname}:5432/core-payments
+spring.datasource.username=postgres
+spring.datasource.password=Twist3r:1
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+
+spring.jpa.hibernate.ddl-auto=validate
+
+management.endpoints.web.exposure.include=health
