--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=validate
 
 management.endpoints.web.exposure.include=health
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
